--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
-<html><head><script>'./index_files/telegram-web-apps.js'</script>
+<html><head>
+	<script>'./index_files/telegram-web-apps.js'</script>
+	<script>'./index_files/hi.js'</script>
 </head>
 </html>
