--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
-<html><head>
+<html lang="en">
+<head>
+	<meta charset="UTF8">
+	<meta> name="viewport"
+</head>
+<body>
 	<script>'./index_files/telegram-web-apps.js'</script>
 	<script>'./index_files/hi.js'</script>
-</head>
+</body>
 </html>
