--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
 	<meta charset="UTF8">
-	<meta> name="viewport"
+	<meta name="viewport" 
+	content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie-edge">
 </head>
 <body>
+	<div id="main">
+		<h1>gavno</h1>
+		<p>poshel nahuj</p>
+		<button>пойти нахуй</button>
+	</div>
+
 	<script>'./index_files/telegram-web-apps.js'</script>
 	<script>'./index_files/hi.js'</script>
 </body>
