--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 	content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie-edge">
 
-	<script>'./index_files/telegram-web-apps.js'</script>
-	<script>'./index_files/hi.js'</script>
+	<script src='./index_files/telegram-web-apps.js'></script>
+	<script src='./index_files/hi.js'></script>
 </head>
 <body>
 	<div id="main">
