--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie-edge">
 
-	<script src='./index_files/telegram-web-apps.js'></script>
+	<script src='https://telegram.org/js/telegram-web-app.js'></script>
 	<script src='./index_files/hi.js'></script>
 </head>
 <body>
