--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div id="main">
 		<h1>gavno</h1>
 		<p>poshel nahuj</p>
-		<button>пойти нахуй</button>
+		<button class="pizda">пойти нахуй</button>
 	</div>
 </body>
 </html>
