--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie-edge">
 
 	<script src='https://telegram.org/js/telegram-web-app.js'></script>
-	<script src='./index_files/hi.js'></script>
+	<script src='index_files/hi.js'></script>
 </head>
 <body>
 	<div id="main">
