--- a/index.html
+++ b/index.html
@@ -7,19 +7,15 @@
 	<meta http-equiv="X-UA-Compatible" content="ie-edge">
 
 	<script src='https://telegram.org/js/telegram-web-app.js'></script>
-	<!-- <script src='index_files/hi.js'></script> -->
+	<script src='index_files/hi.js'></script>
 
 	<title>Aboba</title>
 </head>
 <body>
-	<script>
-		var WebApp = window.Telegram.WebApp;
-		WebApp.showAlert(`Добро пожаловать, @${WebApp.WebAppUser.username}.`);
-	</script>
-	<!-- <div id="pivo">
+	<div id="pivo">
 		<h1>gavno</h1>
 		<p>poshel nahuj</p>
-		<input value="пойти нахуй" onclick="MainButton.OnClick()" type="button">
-	</div> -->
+		<button id="pizda">пойти нахуй</button>
+	</div>
 </body>
 </html>
