--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <body>
 	<div class="container">
 		<div class="inner">
+			<div class="item_crown">
+				<img src="images/crown.png" alt="" class="img_item">
+			</div>
 			<div class="item">
 				<img src="1.png" alt="" class="img">
 				<button class="btn" id="btn1">Add</button>
