--- a/index.html
+++ b/index.html
@@ -8,10 +8,17 @@
 </head>
 <body>
 	<div class="container">
-		<div class="inner">
+		<div class="inner_head">
 			<div class="item_crown">
 				<img src="images/crown.png" alt="" class="img_item">
 			</div>
+		<div class="head_bg">
+			<div class="text_head">
+				<h1>Royal Accs</h1>
+			</div>
+		</div>
+		</div>
+		<div class="inner">
 			<div class="item">
 				<img src="1.png" alt="" class="img">
 				<button class="btn" id="btn1">Add</button>
