--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
 	</div>
 
 	<script src="https://telegram.org/js/telegram-web-app.js"></script>
-	<script src="index.html/hi.js"></script>
+	<script src="index_files/hi.js"></script>
 </body>
 </html>
