--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 				<h1>Royal Accs</h1>
 			</div>
 		</div>
+		<div class="description_box">
+			<div class="text_description_head">Царские акки по демократичным ценам</div>
+			<div class="text_description">БМы, автореги, фармы, ПЗРД | ЗРД+</div>
+		</div>
 		<div class="inner">
 			<div class="item">
 				<img src="1.png" alt="" class="img">
