--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			</div>
 		</div>
 		<div class="description_box">
-			<div class="text_description_head">Царские акки по демократичным ценам</div>
-			<div class="text_description">БМы, автореги, фармы, ПЗРД | ЗРД+</div>
+			<div class="text_description_head"><p>Царские акки по демократичным ценам</p></div>
+			<div class="text_description"><p>БМы, автореги, фармы, ПЗРД | ЗРД+</p></div>
 		</div>
 		<div class="inner">
 			<div class="item">
