--- a/index.html
+++ b/index.html
@@ -20,30 +20,15 @@
 			<div class="text_description_head">Царские акки по демократичным ценам</div>
 			<div class="text_description">БМы, автореги, фармы, ПЗРД | ЗРД+</div>
 		</div>
-		<div class="inner">
-			<div class="item">
-				<img src="1.png" alt="" class="img">
-				<button class="btn" id="btn1">Add</button>
+		<div class="item_grid">
+			<div class="category_text">ПЗРД | ЗРД+</div>
+			<div class="item_crown">
+				<img src="images/ph.png" alt="" class="img_item">
 			</div>
-			<div class="item">
-				<img src="1.png" alt="" class="img">
-				<button class="btn" id="btn2">Add</button>
-			</div>
-			<div class="item">
-				<img src="1.png" alt="" class="img">
-				<button class="btn" id="btn3">Add</button>
-			</div>
-			<div class="item">
-				<img src="1.png" alt="" class="img">
-				<button class="btn" id="btn4">Add</button>
-			</div>
-			<div class="item">
-				<img src="1.png" alt="" class="img">
-				<button class="btn" id="btn5">Add</button>
-			</div>
-			<div class="item">
-				<img src="1.png" alt="" class="img">
-				<button class="btn" id="btn6">Add</button>
+			<div class="item_text">Филиппины Facebook Лимит 50$ Свежий ПЗРД | ЗРД+</div>
+			<div class="item_text">2</div>
+			<div class="item_text">10$</div>
+			<button class="btn" id="btn1">Buy</button>
 			</div>
 		</div>
 	</div>
