--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<div class="description_box">
 			<div class="text_description_head">Царские акки по демократичным ценам</div>
 			<div class="text_description">БМы, автореги, фармы, ПЗРД | ЗРД+</div>
+			<div class="text_description">Нажмите на товар, чтобы прочесть описание</div>
 		</div>
 		<div class="item_grid">
 			<div class="category_text">ПЗРД | ЗРД+</div>
@@ -29,6 +30,16 @@
 			<div class="item_text">2</div>
 			<div class="item_text">10$</div>
 			<button class="btn" id="btn1">Buy</button>
+
+			<div class="category_text">Автореги</div>
+			<div class="item_crown">
+				<img src="images/usa.png" alt="" class="img_item">
+			</div>
+			<div class="item_text">Авторег ⭐ США Facebook iPhone useragent</div>
+			<div class="item_text">0</div>
+			<div class="item_text">0.2$</div>
+			<button class="btn" id="btn2">Buy</button>
+
 			</div>
 		</div>
 	</div>
