--- a/index.html
+++ b/index.html
@@ -23,53 +23,53 @@
 		</div>
 		<div class="item_grid">
 			<div class="category_text">ПЗРД | ЗРД+</div>
-			<div class="item_crown">
+			<div class="item_img">
 				<img src="images/ph.png" alt="" class="img_item">
 			</div>
-			<div class="item_text">Филиппины Facebook Лимит 50$ Свежий ПЗРД | ЗРД+ С ПРОКСИ</div>
+			<div class="item_text">Филиппины — Facebook — Лимит 50$ — Свежий ПЗРД | ЗРД+ — С ПРОКСИ — 2FA — Создан: до 2021</div>
 			<div class="item_text">2</div>
 			<div class="item_text">10$</div>
 			<button class="btn" id="btn1">Buy</button>
 
 			<div class="category_text">Автореги</div>
-			<div class="item_crown">
+			<div class="item_img">
 				<img src="images/usa.png" alt="" class="img_item">
 			</div>
-			<div class="item_text">Авторег ⭐ США Facebook iPhone useragent Поставшик 2-1</div>
+			<div class="item_text">Авторег ⭐— США — Facebook — iPhone useragent — Поставшик 2-1</div>
 			<div class="item_text">0</div>
 			<div class="item_text">0.2$</div>
 			<button class="btn" id="btn2">Buy</button>
 
-			<div class="item_crown">
+			<div class="item_img">
 				<img src="images/usa.png" alt="" class="img_item">
 			</div>
-			<div class="item_text">Авторег ⭐⭐ США Facebook Поставшик 2-2</div>
+			<div class="item_text">Авторег ⭐⭐ — США — Facebook — Поставшик 2-2</div>
 			<div class="item_text">0</div>
 			<div class="item_text">0.25$</div>
 			<button class="btn" id="btn2">Buy</button>
 
-			<div class="item_crown">
+			<div class="item_img">
 				<img src="images/ua.png" alt="" class="img_item">
 			</div>
-			<div class="item_text">Авторег ⭐⭐ Украина Facebook Токен+ 2FA Поставшик 5-1</div>
+			<div class="item_text">Авторег ⭐⭐ — Украина — Facebook — Токен+ — 2FA — Поставшик 5-1</div>
 			<div class="item_text">0</div>
 			<div class="item_text">0.3$</div>
 			<button class="btn" id="btn2">Buy</button>
 
 			<div class="category_text">БМы</div>
-			<div class="item_crown">
+			<div class="item_img">
 				<img src="images/bm.png" alt="" class="img_item">
 			</div>
-			<div class="item_text">БМ Facebook Лимит 50$</div>
+			<div class="item_text">БМ — Facebook — Лимит — 50$</div>
 			<div class="item_text">0</div>
 			<div class="item_text">1$</div>
 			<button class="btn" id="btn2">Buy</button>
 
 			<div class="category_text">Другое</div>
-			<div class="item_crown">
+			<div class="item_img">
 				<img src="images/star.png" alt="" class="img_item">
 			</div>
-			<div class="item_text">"Вечный" пиксель Facebook</div>
+			<div class="item_text">"Вечный" — пиксель — Facebook</div>
 			<div class="item_text">0</div>
 			<div class="item_text">6$</div>
 			<button class="btn" id="btn2">Buy</button>
