--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 			<div class="text_description">Нажмите на товар, чтобы прочесть описание</div>
 		</div>
 		<div class="item_grid">
+			<div class="item_text">Флаг</div>
+			<div class="item_text">Наименование продукта</div>
+			<div class="item_text">В наличии</div>
+			<div class="item_text">Цена</div>
+			<div class="item_text">Купить</div>
+
 			<div class="category_text">ПЗРД | ЗРД+</div>
 			<div class="item_img">
 				<img src="images/ph.png" alt="" class="img_item">
