--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<div class="container">
 		<div class="inner_head">
 			<div class="item_crown">
-				<img src="images/crown.png" alt="" class="img_item">
+				<img src="images/crown.png" alt="" class="item_img">
 			</div>
 			<div class="head_bg">
 				<h1>Royal Accs</h1>
@@ -32,7 +32,7 @@
 			<div class="item_img">
 				<img src="images/ph.png" alt="" class="img_item">
 			</div>
-			<div class="item_text">Филиппины — Facebook — Лимит 50$ — Свежий ПЗРД | ЗРД+ — С ПРОКСИ — 2FA — Создан: до 2021</div>
+			<a class="item_text" href="descriptions/descr1.html">Филиппины — Facebook — Лимит 50$ — Свежий ПЗРД | ЗРД+ — С ПРОКСИ — 2FA — Создан: до 2021</a>
 			<div class="item_text">2</div>
 			<div class="item_text">10$</div>
 			<button class="btn" id="btn1">Buy</button>
@@ -75,7 +75,7 @@
 			<div class="item_img">
 				<img src="images/star.png" alt="" class="img_item">
 			</div>
-			<div class="item_text">"Вечный" — пиксель — Facebook</div>
+			<div class="item_text">"Вечный" пиксель — Facebook</div>
 			<div class="item_text">0</div>
 			<div class="item_text">6$</div>
 			<button class="btn" id="btn2">Buy</button>
