--- a/descriptions/descr1.html
+++ b/descriptions/descr1.html
@@ -4,11 +4,21 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="descr_style.css">
-	<title>Document</title>
+	<title>Royal Accs</title>
 
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
+    <div class="container">
+		<div class="inner_head">
+			<div class="item_crown">
+				<img src="../images/crown.png" alt="" class="item_img">
+			</div>
+			<div class="head_bg">
+				<h1>Royal Accs</h1>
+			</div>
+		</div>
+    </div>
 
 </body>
 </html>
