--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="description_box">
 			<div class="text_description_head">Царские акки по демократичным ценам</div>
 			<div class="text_description">БМы, автореги, фармы, ПЗРД | ЗРД+</div>
-			<div class="text_description">Нажмите на товар, чтобы прочесть описание</div>
+			<div class="text_description">Нажмите на название продукта, чтобы прочесть описание</div>
 		</div>
 		<div class="item_grid">
 			<div class="item_text">Флаг</div>
