--- a/descriptions/descr1.html
+++ b/descriptions/descr1.html
@@ -18,6 +18,9 @@
 				<h1>Royal Accs</h1>
 			</div>
 		</div>
+        <div class="arrow-1">
+            <div></div>
+        </div>
     </div>
 
 </body>
