--- a/descriptions/descr1.html
+++ b/descriptions/descr1.html
@@ -18,9 +18,11 @@
 				<h1>Royal Accs</h1>
 			</div>
 		</div>
-        <div class="arrow-1">
-            <div></div>
-        </div>
+        <a href="../index.html" class="arrow-left">
+            <span></span>
+            <span></span>
+            <span></span>
+        </a>
     </div>
 
 </body>
