--- a/descriptions/descr1.html
+++ b/descriptions/descr1.html
@@ -18,6 +18,17 @@
 				<h1>Royal Accs</h1>
 			</div>
 		</div>
+		<div class="item_grid">
+			<div class="category_text">ПЗРД | ЗРД+</div>
+				<div class="item_img">
+					<img src="../images/ph.png" alt="" class="img_item">
+				</div>
+				<dev class="item_text">Филиппины — Facebook — Лимит 50$ — Свежий ПЗРД | ЗРД+ — С ПРОКСИ — 2FA — Создан: до 2021</dev>
+				<div class="item_text">2</div>
+				<div class="item_text">10$</div>
+				<button class="btn" id="btn1">Buy</button>
+			</div>
+		</div>
         <a href="../index.html" class="arrow-left">
             <span></span>
             <span></span>
