--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 			<div class="category_text">ПЗРД | ЗРД+</div>
 			<div class="item_img">
-				<img src="images/ph.png" alt="" class="img_item">
+				<img src="images/ph.png" alt="">
 			</div>
 			<a class="item_text" href="descriptions/descr1.html">Филиппины — Facebook — Лимит 50$ — Свежий ПЗРД | ЗРД+ — С ПРОКСИ — 2FA — Создан: до 2021</a>
 			<div class="item_text">2</div>
@@ -39,7 +39,7 @@
 
 			<div class="category_text">Автореги</div>
 			<div class="item_img">
-				<img src="images/usa.png" alt="" class="img_item">
+				<img src="images/usa.png" alt="">
 			</div>
 			<div class="item_text">Авторег ⭐— США — Facebook — iPhone useragent — Поставшик 2-1</div>
 			<div class="item_text">0</div>
@@ -47,7 +47,7 @@
 			<button class="btn" id="btn2">Buy</button>
 
 			<div class="item_img">
-				<img src="images/usa.png" alt="" class="img_item">
+				<img src="images/usa.png" alt="">
 			</div>
 			<div class="item_text">Авторег ⭐⭐ — США — Facebook — Поставшик 2-2</div>
 			<div class="item_text">0</div>
@@ -55,7 +55,7 @@
 			<button class="btn" id="btn2">Buy</button>
 
 			<div class="item_img">
-				<img src="images/ua.png" alt="" class="img_item">
+				<img src="images/ua.png" alt="">
 			</div>
 			<div class="item_text">Авторег ⭐⭐ — Украина — Facebook — Токен+ — 2FA — Поставшик 5-1</div>
 			<div class="item_text">0</div>
@@ -64,7 +64,7 @@
 
 			<div class="category_text">БМы</div>
 			<div class="item_img">
-				<img src="images/bm.png" alt="" class="img_item">
+				<img src="images/bm.png" alt="">
 			</div>
 			<div class="item_text">БМ — Facebook — Лимит — 50$</div>
 			<div class="item_text">0</div>
@@ -73,7 +73,7 @@
 
 			<div class="category_text">Другое</div>
 			<div class="item_img">
-				<img src="images/star.png" alt="" class="img_item">
+				<img src="images/star.png" alt="">
 			</div>
 			<div class="item_text">"Вечный" пиксель — Facebook</div>
 			<div class="item_text">0</div>
