--- a/descriptions/descr1.html
+++ b/descriptions/descr1.html
@@ -19,6 +19,11 @@
 			</div>
 		</div>
 		<div class="item_grid">
+			<div class="item_text">Флаг</div>
+			<div class="item_text">Наименование продукта</div>
+			<div class="item_text">В наличии</div>
+			<div class="item_text">Цена</div>
+			<div class="item_text">Купить</div>
 			<div class="category_text">ПЗРД | ЗРД+</div>
 				<div class="item_img">
 					<img src="../images/ph.png" alt="" class="img_item">
@@ -28,13 +33,27 @@
 				<div class="item_text">10$</div>
 				<button class="btn" id="btn1">Buy</button>
 			</div>
+			<div class="category_text">Описание</div>
+			<div class="description_text">Аккаунты очень трастовые, живут месяцами. Единственный враг — повторное ЗРД, которое не забанится.
+			</div>
+			<div class="description_text">Только <b>у вас</b> есть доступ к акку, никаких соседей и владельцев. Намного лучше всяких фармов за 20$.	
+			</div>
+			<div class="description_text">Дата ПЗРД: <b>до 2-х недель</b>, так вы сможете разбанивать ваши активы.</div>
+			<div class="description_text">Если акк с ПЗРД <b>больше</b> месяца, то просите замену, выдадим.</div>
+			<div class="description_text">Лимит: 50$.</div>
+			<div class="description_text">В комплекте идет: <b>лог, пасс, 2фа от фб | ipv6 прокси (http) | лог, пасс, резервная почта от почты, которая подвязана к фб | юзерагент, токен, куки</b></div>
+			<div class="description_text">Формат:</div>
+			<div class="description_text">login|pass|2FA|proxy|login_mail|pass_mail|reserve_mail|useragent|token|cookie</div>
+			<div class="description_text">❗ В каждом аккаунте лежат куки для facebook.com и hotmail.com. Вы без проблем сможете зайти на hotmail.com и читать входящие письма, даже на ipv6 прокси (не всегда, но в большинстве случаев)</div>
+			<div class="description_text">❗❗Прочитайте раздел "Работа с акками" и "Гарантии", чтобы не было лишних вопросов</div>
 		</div>
-        <a href="../index.html" class="arrow-left">
-            <span></span>
-            <span></span>
-            <span></span>
-        </a>
     </div>
+
+	<a href="../index.html" class="arrow-left">
+		<span></span>
+		<span></span>
+		<span></span>
+	</a>
 
 </body>
 </html>
