--- a/descriptions/descr1.html
+++ b/descriptions/descr1.html
@@ -28,11 +28,10 @@
 				<div class="item_img">
 					<img src="../images/ph.png" alt="" class="img_item">
 				</div>
-				<dev class="item_text">Филиппины — Facebook — Лимит 50$ — Свежий ПЗРД | ЗРД+ — С ПРОКСИ — 2FA — Создан: до 2021</dev>
+				<div class="item_text">Филиппины — Facebook — Лимит 50$ — Свежий ПЗРД | ЗРД+ — С ПРОКСИ — 2FA — Создан: до 2021</div>
 				<div class="item_text">2</div>
 				<div class="item_text">10$</div>
 				<button class="btn" id="btn1">Buy</button>
-			</div>
 			<div class="category_text">Описание</div>
 			<div class="description_text">Аккаунты очень трастовые, живут месяцами. Единственный враг — повторное ЗРД, которое не забанится.
 			</div>
@@ -43,7 +42,8 @@
 			<div class="description_text">Лимит: 50$.</div>
 			<div class="description_text">В комплекте идет: <b>лог, пасс, 2фа от фб | ipv6 прокси (http) | лог, пасс, резервная почта от почты, которая подвязана к фб | юзерагент, токен, куки</b></div>
 			<div class="description_text">Формат:</div>
-			<div class="description_text">login|pass|2FA|proxy|login_mail|pass_mail|reserve_mail|useragent|token|cookie</div>
+			<div class="description_text">login|pass|2FA|proxy|login_mail</div>
+			<div class="description_text">|pass_mail|reserve_mail|useragent|token|cookie</div>
 			<div class="description_text">❗ В каждом аккаунте лежат куки для facebook.com и hotmail.com. Вы без проблем сможете зайти на hotmail.com и читать входящие письма, даже на ipv6 прокси (не всегда, но в большинстве случаев)</div>
 			<div class="description_text">❗❗Прочитайте раздел "Работа с акками" и "Гарантии", чтобы не было лишних вопросов</div>
 		</div>
