--- a/descriptions/descr1.html
+++ b/descriptions/descr1.html
@@ -51,8 +51,7 @@
 
 	<a href="../index.html" class="arrow-left">
 		<span></span>
-		<span></span>
-		<span></span>
+		<span>back</span>
 	</a>
 
 </body>
