--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="item_grid">
 			<div class="item_text">Флаг</div>
 			<div class="item_text">Наименование продукта</div>
-			<div class="item_text">В наличии</div>
+			<div class="item_text">Наличие</div>
 			<div class="item_text">Цена</div>
 			<div class="item_text">Купить</div>
 
