--- a/descriptions/descr1.html
+++ b/descriptions/descr1.html
@@ -21,7 +21,7 @@
 		<div class="item_grid">
 			<div class="item_text">Флаг</div>
 			<div class="item_text">Наименование продукта</div>
-			<div class="item_text">В наличии</div>
+			<div class="item_text">Наличие</div>
 			<div class="item_text">Цена</div>
 			<div class="item_text">Купить</div>
 			<div class="category_text">ПЗРД | ЗРД+</div>
