--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		</div>
 		<div class="item_grid">
 			<div class="item_text">Флаг</div>
-			<div class="item_text">Наименование продукта</div>
+			<div class="item_text">Продукт</div>
 			<div class="item_text">Наличие</div>
 			<div class="item_text">Цена</div>
 			<div class="item_text">Купить</div>
