--- a/descriptions/descr1.html
+++ b/descriptions/descr1.html
@@ -43,7 +43,8 @@
 			<div class="description_text">В комплекте идет: <b>лог, пасс, 2фа от фб | ipv6 прокси (http) | лог, пасс, резервная почта от почты, которая подвязана к фб | юзерагент, токен, куки</b></div>
 			<div class="description_text">Формат:</div>
 			<div class="description_text">login|pass|2FA|proxy|login_mail</div>
-			<div class="description_text">|pass_mail|reserve_mail|useragent|token|cookie</div>
+			<div class="description_text">|pass_mail|reserve_mail</div>
+			<div class="description_text">|useragent|token|cookie</div>
 			<div class="description_text">❗ В каждом аккаунте лежат куки для facebook.com и hotmail.com. Вы без проблем сможете зайти на hotmail.com и читать входящие письма, даже на ipv6 прокси (не всегда, но в большинстве случаев)</div>
 			<div class="description_text">❗❗Прочитайте раздел "Работа с акками" и "Гарантии", чтобы не было лишних вопросов</div>
 		</div>
