--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<div class="item_img">
 				<img src="images/usa.png" alt="">
 			</div>
-			<div class="item_text">Авторег ⭐— США — Facebook — iPhone useragent — Поставшик 2-1</div>
+			<a class="item_text" href="descriptions/descr2.html">Авторег ⭐— США — Facebook — iPhone useragent — Поставшик 2-1</a>
 			<div class="item_text">0</div>
 			<div class="item_text">0.2$</div>
 			<button class="btn" id="btn2">Buy</button>
