--- a/descriptions/descr2.html
+++ b/descriptions/descr2.html
@@ -33,9 +33,9 @@
 			<div class="item_text">0.2$</div>
 			<button class="btn" id="btn2">Buy</button>
 			<div class="category_text">Описание</div>
-			<div class="description_text">Пустые автореги, нет заполнения, нет соц активности (постов/друзей). Идеально подходят под быструю подвязку в кинг аккаунт
-				В комплекте юзерагент от айфона!
+			<div class="description_text">Пустые автореги, нет заполнения, нет соц активности (постов/друзей). Идеально подходят под быструю подвязку в кинг аккаунт.
 			</div>
+			<div class="description_text">В комплекте юзерагент от айфона!</div>
 			<div class="description_text">В идеале делать первый вход с этим юзерагентом и затем менять на свой	
 			</div>
 			<div class="description_text">Дата регистрации: больше 3-х дней назад.</div>
