--- a/index.html
+++ b/index.html
@@ -49,18 +49,18 @@
 			<div class="item_img">
 				<img src="images/usa.png" alt="">
 			</div>
-			<div class="item_text">Авторег ⭐⭐ — США — Facebook — Поставшик 2-2</div>
+			<a class="item_text" href="descriptions/descr3.html">Авторег ⭐⭐ — США — Facebook — Поставшик 2-2</a>
 			<div class="item_text">0</div>
 			<div class="item_text">0.25$</div>
-			<button class="btn" id="btn2">Buy</button>
+			<button class="btn" id="btn3">Buy</button>
 
 			<div class="item_img">
 				<img src="images/ua.png" alt="">
 			</div>
-			<div class="item_text">Авторег ⭐⭐ — Украина — Facebook — Токен+ — 2FA — Поставшик 5-1</div>
+			<a class="item_text" href="descriptions/descr4.html">Авторег ⭐⭐ — Украина — Facebook — Токен+ — 2FA — Поставшик 5-1</a>
 			<div class="item_text">0</div>
 			<div class="item_text">0.3$</div>
-			<button class="btn" id="btn2">Buy</button>
+			<button class="btn" id="btn4">Buy</button>
 
 			<div class="category_text">БМы</div>
 			<div class="item_img">
@@ -69,7 +69,7 @@
 			<div class="item_text">БМ — Facebook — Лимит — 50$</div>
 			<div class="item_text">0</div>
 			<div class="item_text">1$</div>
-			<button class="btn" id="btn2">Buy</button>
+			<button class="btn" id="btn5">Buy</button>
 
 			<div class="category_text">Другое</div>
 			<div class="item_img">
@@ -78,7 +78,7 @@
 			<div class="item_text">"Вечный" пиксель — Facebook</div>
 			<div class="item_text">0</div>
 			<div class="item_text">6$</div>
-			<button class="btn" id="btn2">Buy</button>
+			<button class="btn" id="btn6">Buy</button>
 
 			</div>
 		</div>
