--- a/descriptions/descr4.html
+++ b/descriptions/descr4.html
@@ -33,24 +33,19 @@
 			<div class="item_text">0.3$</div>
 			<button class="btn" id="btn4">Buy</button>
 			<div class="category_text">Описание</div>
-			<div class="description_text">Автореги с аватаркой и обложкой, нет соц активности (постов/друзей).
-			</div>
-			<div class="description_text">Не так часто летят на селфи/ЗРД, если передавать на кинг.</div>
-			<div class="description_text">Идеально подходят под подвязку в кинг аккаунт.	
-			</div>
-			<div class="description_text">Дата регистрации: больше 3-х дней назад.</div>
+			<div class="description_text">Автореги с аватаркой.</div>
+			<div class="description_text">Дата регистрации: до 10-и дней.</div>
 			<div class="description_text">Регистрация: андроид.</div>
-			<div class="description_text">Подтверждены по почте: ✅.</div>
-			<div class="description_text">Подтверждены по смс: ❌.</div>
+			<div class="description_text">Подтверждены по почте: ❌</div>
+			<div class="description_text">Подтверждены по смс: ✅</div>
 			<div class="description_text">Лимит: 25/50$.</div>
-			<div class="description_text">Валюта и часовой пояс: США/доллары, могут встречаться и другие страны/валюты.</div>
-			<div class="description_text">В комплекте идет: <b>лог, пасс, 2фа от фб | лог, пасс от почты, которая подвязана к фб | юзерагент, куки.</b></div>
-			<div class="description_text">НЕТ ТОКЕНА (берите из куки).</div>
+			<div class="description_text">Валюта и часовой пояс: укр/доллары.</div>
+			<div class="description_text">В комплекте идет: <b>лог, пасс, 2фа от фб, юзерагент, токен, куки.</b></div>
 			<div class="description_text">Формат:</div>
 			<div class="description_text">login|pass|2FA|proxy|login_mail</div>
 			<div class="description_text">|pass_mail|reserve_mail</div>
 			<div class="description_text">|useragent|token|cookie</div>
-			<div class="description_text">❗ Если каких-то значение нет, например токена, то вместо него будет пустое значение</div>
+			<div class="description_text">❗ Если каких-то значений нет, например токена, то вместо него будет пустое значение.</div>
 			<div class="description_text">❗❗Прочитайте раздел "Работа с акками" и "Гарантии", чтобы не было лишних вопросов</div>
 		</div>
     </div>
