--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			<div class="item_img">
 				<img src="images/bm.png" alt="">
 			</div>
-			<div class="item_text">БМ — Facebook — Лимит — 50$</div>
+			<a class="item_text" href="descriptions/descr4.html">БМ — Facebook — Лимит — 50$</a>
 			<div class="item_text">0</div>
 			<div class="item_text">1$</div>
 			<button class="btn" id="btn5">Buy</button>
