--- a/descriptions/descr5.html
+++ b/descriptions/descr5.html
@@ -24,14 +24,14 @@
 			<div class="item_text">Наличие</div>
 			<div class="item_text">Цена</div>
 			<div class="item_text">Купить</div>
-			<div class="category_text">Автореги</div>
+			<div class="category_text">БМы</div>
 			<div class="item_img">
 				<img src="../images/bm.png" alt="">
 			</div>
 			<div class="item_text">БМ — Facebook — Лимит — 50$</div>
 			<div class="item_text">0</div>
 			<div class="item_text">1$</div>
-			<button class="btn" id="btn4">Buy</button>
+			<button class="btn" id="btn6">Buy</button>
 			<div class="category_text">Описание</div>
 			<div class="description_text">Обычные БМы с Лимитом 50$ нашего производства.</div>
 			<div class="description_text">В любое время сможем скинуть приглос на БМ, даже если вы потеряли доступ к акку, где висит БМ
