--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			<div class="item_img">
 				<img src="images/bm.png" alt="">
 			</div>
-			<a class="item_text" href="descriptions/descr4.html">БМ — Facebook — Лимит — 50$</a>
+			<a class="item_text" href="descriptions/descr5.html">БМ — Facebook — Лимит — 50$</a>
 			<div class="item_text">0</div>
 			<div class="item_text">1$</div>
 			<button class="btn" id="btn5">Buy</button>
@@ -75,7 +75,7 @@
 			<div class="item_img">
 				<img src="images/star.png" alt="">
 			</div>
-			<div class="item_text">"Вечный" пиксель — Facebook</div>
+			<a class="item_text" href="descriptions/descr6.html">"Вечный" пиксель — Facebook</a>
 			<div class="item_text">0</div>
 			<div class="item_text">6$</div>
 			<button class="btn" id="btn6">Buy</button>
