--- a/index.html
+++ b/index.html
@@ -63,6 +63,12 @@
 			<div class="item_text">6$</div>
 			<button class="btn" id="btn6">Купить</button>
 
+			<div class="category_text">Другое</div>
+			<a class="item_text" href="descriptions/descr6.html" id="aboba">simple text</a>
+			<div class="item_text">0</div>
+			<div class="item_text">6$</div>
+			<button class="btn" id="btn6">Купить</button>
+
 			</div>
 		</div>
 </body>
